[package]
name = "molassembler"
version = "0.1.0"
authors = ["Jan-Grimo Sobez <jan-grimo.sobez@phys.chem.ethz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
nalgebra = { version = "0.31", features = ["rand"] }
lazy_static = "1.4.0"
thiserror = "1.0"
approx = "0.5"
argmin = "0.8"
itertools = "0.10"
num-traits = "0.2"
derive_more = "0.99"
index-derive = { path = "index-derive" }
delegate = "0.8.0"
petgraph = "0.6"
memoize = "0.4"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "similarities"
harness = false
