[package]
name = "inorgmol"
version = "0.1.0"
authors = ["Jan-Grimo Sobez <jan-grimo.sobez@phys.chem.ethz.ch>"]
edition = "2021"

[features]
default = ["gpu"]
gpu = ["dep:wgpu", "dep:futures", "dep:futures-intrusive", "dep:bytemuck", "dep:pollster"]

[dependencies]
rand = "0.8"
nalgebra = { version = "0.32", features = ["rand", "serde-serialize", "rayon"] }
nalgebra-lapack = "0.24"
lazy_static = "1.4.0"
thiserror = "1.0"
approx = "0.5"
argmin-math = { version = "0.3", features = ["nalgebra_latest-serde"] }
argmin = "0.8"
itertools = "0.10"
num-traits = "0.2"
derive_more = "0.99"
index-derive = { path = "index-derive" }
delegate = "0.8.0"
petgraph = "0.6"
memoize = "0.4"
lapjv = "0.2"
statrs = "0.16"
csv = "1.2"
gcd = "2.3.0"
rayon = "1.7"
ordered-float = "3.7"
sorted-vec = "0.8"
wgpu = { version = "0.15", optional = true }
futures = { version = "0.3", optional = true }
futures-intrusive = { version = "0.5", optional = true }
bytemuck = { version = "1.13", optional = true }
pollster = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "similarities"
harness = false

[[bench]]
name = "linear_assignment"
harness = false

[[bench]]
name = "refinement"
harness = false

# Disable bench so criterion's cargo bench -- --quick works
[lib]
bench = false

[[bin]]
name = "similarity_error_rates"
test = false

[[bin]]
name = "similarity_distributions"
test = false

[[bin]]
name = "try_tetrahedra"
test = false
